--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,6 +7,7 @@
         <variable
             name="signupviewmodel"
             type="com.example.soptseminar.presentation.vm.SignUpViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -90,6 +91,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="확인"
+            android:onClick="signUp"
             android:layout_marginTop="150dp"
             app:layout_constraintTop_toBottomOf="@+id/signUp_pass_edt"
             app:layout_constraintStart_toStartOf="@+id/signUp_pass_edt"
