--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -36,13 +36,5 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.soptseminar.presentation.fragment.HomeFragment"
-        android:label="HomeFragment" >
-        <action
-            android:id="@+id/action_homeFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/detailFragment"
-        android:name="com.example.soptseminar.presentation.fragment.DetailFragment"
-        android:label="DetailFragment" />
+        android:label="HomeFragment" />
 </navigation>
