--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,12 +13,14 @@
         android:layout_height="match_parent"
         tools:context=".presentation.fragment.MainFragment">
 
-        <TextView
+        <ImageView
             android:id="@+id/main_logo_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
-            android:text="SOPT"
+            android:layout_marginStart="94dp"
+            android:layout_marginTop="130dp"
+            android:layout_marginEnd="94dp"
+            android:src="@drawable/logo_2"
             android:textSize="50sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,10 +30,11 @@
             android:id="@+id/main_id_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="100dp"
-            android:textSize="24sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="68dp"
             android:text="아이디"
+            android:textStyle="bold"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/main_logo_txt" />
 
@@ -39,11 +42,11 @@
             android:id="@+id/main_id_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="36dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="16dp"
             android:ems="10"
-            android:inputType="textPersonName"
             android:hint="아이디"
+            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/main_id_txt"
             app:layout_constraintTop_toBottomOf="@+id/main_id_txt" />
@@ -52,9 +55,10 @@
             android:id="@+id/main_pass_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="38dp"
             android:text="비밀번호"
-            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@+id/main_id_edt"
             app:layout_constraintTop_toBottomOf="@+id/main_id_edt" />
 
@@ -62,32 +66,40 @@
             android:id="@+id/main_pass_edt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="6dp"
             android:ems="10"
-            android:inputType="textPassword"
             android:hint="비밀번호"
+            android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="@+id/main_id_edt"
             app:layout_constraintStart_toStartOf="@+id/main_pass_txt"
             app:layout_constraintTop_toBottomOf="@+id/main_pass_txt" />
 
         <!-- Click method need -->
+        <!-- Button does not have checkState -->
         <Button
             android:id="@+id/login_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="71dp"
+            android:background="@drawable/login_btn_blue"
             android:text="로그인"
+            android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="@+id/main_pass_edt"
             app:layout_constraintStart_toStartOf="@+id/main_pass_edt"
             app:layout_constraintTop_toBottomOf="@+id/main_pass_edt" />
 
         <TextView
+            android:id="@+id/signUp_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/signUp_txt"
+            android:layout_marginStart="118dp"
+            android:layout_marginTop="31dp"
+            android:layout_marginEnd="118dp"
             android:text="회원가입"
-            android:layout_marginTop="20dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/login_btn"
-            app:layout_constraintTop_toBottomOf="@+id/login_btn"/>
+            app:layout_constraintStart_toStartOf="@+id/login_btn"
+            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
