--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,7 +7,6 @@
         <variable
             name="signupviewmodel"
             type="com.example.soptseminar.presentation.vm.SignUpViewModel" />
-
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,22 +18,25 @@
             android:id="@+id/signUp_name_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="81dp"
             android:text="이름"
-            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/signUp_name_edtxt"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/signup_edit_yellow"
             android:ems="10"
-            android:inputType="textPersonName"
             android:hint="이름"
-            android:layout_marginRight="20dp"
+            android:inputType="textPersonName"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_name_txt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_name_txt" />
@@ -43,21 +45,24 @@
             android:id="@+id/signUp_id_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="46dp"
             android:text="아이디"
-            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="@+id/signUp_name_edtxt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_name_edtxt" />
 
         <EditText
             android:id="@+id/signUp_id_edt"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="아이디"
+            android:layout_height="40dp"
+            android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
+            android:textSize="12sp"
+            android:background="@drawable/signup_edit_yellow"
+            android:ems="10"
+            android:hint="아이디"
+            android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_id_txt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_id_txt" />
@@ -66,7 +71,7 @@
             android:id="@+id/signUp_pass_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="46dp"
             android:text="비밀번호"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="@+id/signUp_id_edt"
