--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -19,24 +19,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="81dp"
+            android:layout_marginTop="57dp"
             android:text="이름"
+            android:textSize="@dimen/textSize"
             android:textStyle="bold"
-            android:textSize="12sp"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/signUp_name_edtxt"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/editTextHeight"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/signup_edit_yellow"
-            android:ems="10"
-            android:hint="이름"
+            android:background="@drawable/edt_background"
+            android:hint="@string/name_hint_text"
+            android:paddingStart="@dimen/default_margin"
             android:inputType="textPersonName"
-            android:textSize="12sp"
+            android:textSize="@dimen/textSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_name_txt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_name_txt" />
@@ -45,23 +46,24 @@
             android:id="@+id/signUp_id_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="46dp"
+            android:layout_marginTop="38dp"
             android:text="아이디"
+            android:textSize="@dimen/textSize"
             android:textStyle="bold"
-            android:textSize="12sp"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/signUp_name_edtxt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_name_edtxt" />
 
         <EditText
             android:id="@+id/signUp_id_edt"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/editTextHeight"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
-            android:textSize="12sp"
-            android:background="@drawable/signup_edit_yellow"
-            android:ems="10"
-            android:hint="아이디"
+            android:textSize="@dimen/textSize"
+            android:background="@drawable/edt_background"
+            android:paddingStart="@dimen/default_margin"
+            android:hint="@string/id_hint_text"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_id_txt"
@@ -71,33 +73,41 @@
             android:id="@+id/signUp_pass_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="46dp"
+            android:layout_marginTop="38dp"
             android:text="비밀번호"
-            android:textSize="24sp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/textSize"
             app:layout_constraintStart_toStartOf="@+id/signUp_id_edt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_id_edt" />
 
         <EditText
             android:id="@+id/signUp_pass_edt"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:ems="10"
-            android:hint="비밀번호"
-            android:inputType="textPassword"
+            android:layout_height="@dimen/editTextHeight"
+            android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
+            android:background="@drawable/edt_background"
+            android:hint="@string/pass_hint_text"
+            android:inputType="textPassword"
+            android:paddingStart="@dimen/default_margin"
+            android:textSize="@dimen/textSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_pass_txt"
             app:layout_constraintTop_toBottomOf="@+id/signUp_pass_txt" />
 
         <!-- button click need-->
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/signUp_ok_btn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="확인"
+            android:layout_marginTop="127dp"
+            android:text="JOIN"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/soptYellow"
             android:onClick="signUp"
-            android:layout_marginTop="150dp"
+            app:cornerRadius="8dp"
+            app:backgroundTint="@color/mainBlack"
             app:layout_constraintTop_toBottomOf="@+id/signUp_pass_edt"
             app:layout_constraintStart_toStartOf="@+id/signUp_pass_edt"
             app:layout_constraintEnd_toEndOf="@+id/signUp_pass_edt"/>
