--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="testBlue">#00BFFF</color>
     <color name="testRed">#FA8072</color>
-    <color name="testYellow">#ffd500</color>
+    <color name="soptYellow">#ffd500</color>
+    <color name="black">#000000</color>
+    <color name="mainGray">#f3f3f3</color>
+    <color name="mainBlack">#3f3f3f</color>
 </resources>
