--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="app_margin_left">16dp</dimen>
-    <dimen name="app_margin_right">16dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+    <dimen name="insideLayoutHeight">80dp</dimen>
+    <dimen name="editTextHeight">40dp</dimen>
+    <dimen name="textSize">12sp</dimen>
 </resources>
