--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,119 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".presentation.main.MainFragment">
 
-    <data>
-        <variable
-            name="mainviewmodel"
-            type="com.example.soptseminar.presentation.vm.MainViewModel" />
-    </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.fragment.MainFragment">
+        android:text="@string/hello_blank_fragment" />
 
-        <ImageView
-            android:id="@+id/main_logo_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="94dp"
-            android:layout_marginTop="106dp"
-            android:layout_marginEnd="94dp"
-            android:src="@drawable/logo_2"
-            android:textSize="50sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/main_id_txt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="@dimen/default_margin"
-            android:text="아이디"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_logo_txt" />
-
-
-        <EditText
-            android:id="@+id/main_id_edt"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/editTextHeight"
-            android:layout_marginTop="6dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/edt_background"
-            android:hint="@string/id_hint_text"
-            android:inputType="textPersonName"
-            android:paddingStart="16dp"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/main_id_txt"
-            app:layout_constraintTop_toBottomOf="@+id/main_id_txt" />
-
-        <TextView
-            android:id="@+id/main_pass_txt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="38dp"
-            android:text="비밀번호"
-            android:textColor="@color/black"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/main_id_edt"
-            app:layout_constraintTop_toBottomOf="@+id/main_id_edt"
-            app:layout_constraintEnd_toEndOf="@+id/main_id_edt"/>
-
-        <EditText
-            android:id="@+id/main_pass_edt"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/editTextHeight"
-            android:layout_marginTop="6dp"
-            android:hint="@string/pass_hint_text"
-            android:inputType="textPassword"
-            android:textSize="12sp"
-            android:paddingStart="@dimen/default_margin"
-            android:background="@drawable/edt_background"
-            app:layout_constraintStart_toStartOf="@+id/main_pass_txt"
-            app:layout_constraintTop_toBottomOf="@+id/main_pass_txt"
-            app:layout_constraintEnd_toEndOf="@+id/main_pass_txt"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/login_btn"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="56dp"
-            android:text="LOGIN"
-            android:textColor="@color/soptYellow"
-            android:textSize="18sp"
-            app:backgroundTint="@color/mainBlack"
-            app:cornerRadius="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/main_pass_edt"
-            app:layout_constraintStart_toStartOf="@+id/main_pass_edt"
-            app:layout_constraintTop_toBottomOf="@+id/main_pass_edt" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/signUp_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="118dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="118dp"
-            android:text="회원가입 하러가기"
-            android:textSize="@dimen/textSize"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/login_btn"
-            app:layout_constraintStart_toStartOf="@+id/login_btn"
-            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</FrameLayout>
