--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -13,14 +13,6 @@
             app:popUpTo="@+id/signInFragment"/>
     </fragment>
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.soptseminar.presentation.fragment.HomeFragment"
-        android:label="HomeFragment" >
-        <action
-            android:id="@+id/action_homeFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
-    </fragment>
-    <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.soptseminar.presentation.fragment.DetailFragment"
         android:label="DetailFragment" />
@@ -32,9 +24,13 @@
             android:id="@+id/action_signInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
         <action
-            android:id="@+id/action_signInFragment_to_homeFragment"
-            app:destination="@id/homeFragment"
+            android:id="@+id/action_signInFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
             app:popUpTo="@id/signInFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.soptseminar.presentation.main.MainFragment"
+        android:label="MainFragment" />
 </navigation>
