--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.fragment.HomeFragment">
+        tools:context=".presentation.fragment.UserListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/homeRecyclerView"
