[FEATURE] : Refactor recyclerview click

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -33,4 +33,12 @@
         android:id="@+id/mainFragment"
         android:name="com.example.soptseminar.presentation.main.MainFragment"
         android:label="MainFragment" />
+    <fragment
+        android:id="@+id/userListFragment"
+        android:name="com.example.soptseminar.presentation.fragment.UserListFragment"
+        android:label="UserListFragment" >
+        <action
+            android:id="@+id/action_userListFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+    </fragment>
 </navigation>
