--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -25,7 +25,7 @@
             android:id="@+id/detail_subtitle"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
-            android:text="subtitle"
+            android:text="hello! everyOne"
             android:textSize="24sp"/>
         <TextView
             android:layout_width="match_parent"
