--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -4,17 +4,12 @@
         <variable
             name="profileData"
             type="com.example.soptseminar.presentation.model.ProfileData" />
-
-        <variable
-            name="clickListener"
-            type="com.example.soptseminar.presentation.adapter.ProfileAdapter.ProfileListener" />
     </data>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="@{() -> clickListener.onClick(profileData)}">
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
