--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/detail_title"
             android:text="title"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textSize="24sp"/>
 
         <TextView
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/detail_subtitle"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:text="hello! everyOne"
             android:textSize="24sp"/>
         <TextView
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/detail_date"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:text="Date"
             android:textSize="24sp"/>
         <TextView
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/detail_txt"
             android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:text="Text"
             android:textSize="24sp"/>
     </LinearLayout>
