--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="viewModelMain"
+            name="mainviewmodel"
             type="com.example.soptseminar.presentation.viewmodel.MainViewModel" />
     </data>
 
@@ -28,13 +28,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/main_id_txt"
+            android:id="@+id/main_email_txt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="68dp"
             android:layout_marginEnd="@dimen/default_margin"
-            android:text="아이디"
+            android:text="@string/email_text"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -44,34 +44,34 @@
 
 
         <EditText
-            android:id="@+id/main_id_edt"
+            android:id="@+id/main_email_edt"
             android:layout_width="0dp"
             android:layout_height="@dimen/editTextHeight"
             android:layout_marginTop="6dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/edt_background"
-            android:hint="@string/id_hint_text"
-            android:inputType="textPersonName"
-            android:text="@{viewModelMain.userId}"
+            android:hint="@string/email_hint_text"
+            android:inputType="textEmailAddress"
             android:paddingStart="16dp"
             android:textSize="12sp"
+            android:text="@{mainviewmodel.user.email}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/main_id_txt"
-            app:layout_constraintTop_toBottomOf="@+id/main_id_txt" />
+            app:layout_constraintStart_toStartOf="@+id/main_email_txt"
+            app:layout_constraintTop_toBottomOf="@+id/main_email_txt" />
 
         <TextView
             android:id="@+id/main_pass_txt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="38dp"
-            android:text="비밀번호"
+            android:text="@string/password_text"
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/main_id_edt"
-            app:layout_constraintTop_toBottomOf="@+id/main_id_edt"
-            app:layout_constraintEnd_toEndOf="@+id/main_id_edt"/>
+            app:layout_constraintStart_toStartOf="@+id/main_email_edt"
+            app:layout_constraintTop_toBottomOf="@+id/main_email_edt"
+            app:layout_constraintEnd_toEndOf="@+id/main_email_edt"/>
 
         <EditText
             android:id="@+id/main_pass_edt"
@@ -81,24 +81,25 @@
             android:hint="@string/pass_hint_text"
             android:inputType="textPassword"
             android:textSize="12sp"
-            android:text="@{viewModelMain.userPassword}"
             android:paddingStart="@dimen/default_margin"
             android:background="@drawable/edt_background"
+            android:text="@{mainviewmodel.user.password}"
             app:layout_constraintStart_toStartOf="@+id/main_pass_txt"
             app:layout_constraintTop_toBottomOf="@+id/main_pass_txt"
             app:layout_constraintEnd_toEndOf="@+id/main_pass_txt"/>
 
-        <com.google.android.material.button.MaterialButton
+        <Button
             android:id="@+id/login_btn"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginTop="56dp"
-            android:text="LOGIN"
+            android:layout_marginTop="52dp"
+            android:text="@string/signIn_btn_text"
             android:textColor="@color/soptYellow"
             android:textSize="18sp"
             app:backgroundTint="@color/mainBlack"
             app:cornerRadius="8dp"
             app:layout_constraintEnd_toEndOf="@+id/main_pass_edt"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/main_pass_edt"
             app:layout_constraintTop_toBottomOf="@+id/main_pass_edt" />
 
@@ -109,7 +110,7 @@
             android:layout_marginStart="118dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="118dp"
-            android:text="회원가입 하러가기"
+            android:text="@string/go_to_signUp_text"
             android:textSize="@dimen/textSize"
             android:textColor="@color/black"
             android:textStyle="bold"
