--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -3,6 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="mainviewModel"
+            type="com.example.soptseminar.presentation.viewmodel.MainViewModel" />
+        <variable
+            name="user"
+            type="com.example.soptseminar.model.User" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="57dp"
-            android:text="이름"
+            android:text="@string/name_text"
             android:textSize="@dimen/textSize"
             android:textStyle="bold"
             android:textColor="@color/black"
@@ -34,14 +42,15 @@
             android:textSize="@dimen/textSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_name_txt"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_name_txt" />
+            app:layout_constraintTop_toBottomOf="@+id/signUp_name_txt"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
-            android:id="@+id/signUp_id_txt"
+            android:id="@+id/signUp_email_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="38dp"
-            android:text="아이디"
+            android:text="@string/email_text"
             android:textSize="@dimen/textSize"
             android:textStyle="bold"
             android:textColor="@color/black"
@@ -49,37 +58,38 @@
             app:layout_constraintTop_toBottomOf="@+id/signUp_name_edtxt" />
 
         <EditText
-            android:id="@+id/signUp_id_edt"
+            android:id="@+id/signUp_email_edt"
             android:layout_width="0dp"
             android:layout_height="@dimen/editTextHeight"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:textSize="@dimen/textSize"
             android:background="@drawable/edt_background"
             android:paddingStart="@dimen/default_margin"
-            android:hint="@string/id_hint_text"
-            android:inputType="textPersonName"
+            android:hint="@string/email_hint_text"
+            android:inputType="textEmailAddress"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/signUp_id_txt"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_id_txt" />
+            app:layout_constraintStart_toStartOf="@+id/signUp_email_txt"
+            app:layout_constraintTop_toBottomOf="@+id/signUp_email_txt"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/signUp_pass_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="38dp"
-            android:text="비밀번호"
+            android:text="@string/password_text"
             android:textColor="@color/black"
             android:textSize="@dimen/textSize"
-            app:layout_constraintStart_toStartOf="@+id/signUp_id_edt"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_id_edt" />
+            app:layout_constraintStart_toStartOf="@+id/signUp_email_edt"
+            app:layout_constraintTop_toBottomOf="@+id/signUp_email_edt" />
 
         <EditText
             android:id="@+id/signUp_pass_edt"
             android:layout_width="0dp"
             android:layout_height="@dimen/editTextHeight"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/edt_background"
             android:hint="@string/pass_hint_text"
             android:inputType="textPassword"
@@ -87,7 +97,8 @@
             android:textSize="@dimen/textSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/signUp_pass_txt"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_pass_txt" />
+            app:layout_constraintTop_toBottomOf="@+id/signUp_pass_txt"
+            tools:ignore="RtlSymmetry" />
 
         <!-- button click need-->
         <com.google.android.material.button.MaterialButton
@@ -95,7 +106,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="127dp"
-            android:text="JOIN"
+            android:text="@string/signUp_btn_text"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/soptYellow"
@@ -104,5 +115,6 @@
             app:layout_constraintTop_toBottomOf="@+id/signUp_pass_edt"
             app:layout_constraintStart_toStartOf="@+id/signUp_pass_edt"
             app:layout_constraintEnd_toEndOf="@+id/signUp_pass_edt"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
