--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="profileData"
-            type="com.example.soptseminar.presentation.model.ProfileData" />
+            type="com.example.soptseminar.model.ProfileData" />
     </data>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -35,7 +35,7 @@
                     android:layout_height="wrap_content"
                     android:text="@{profileData.title}"
                     android:textSize="12sp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="6dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/profile_image"
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:text="@{profileData.subTitle}"
                     android:textSize="12sp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/profile_image"
